Added python to verbatimEnviroonments

--- a/defaultSettings.yaml
+++ b/defaultSettings.yaml
@@ -109,6 +109,7 @@ verbatimEnvironments:
   verbatim: 1
   lstlisting: 1
   minted: 1
+  python: 1
 
 # verbatim commands such as \verb! body !, \lstinline$something else$
 verbatimCommands:
